fix: Cutoff wave

--- a/src/components/Pages/SetupPage/SetupPage.module.css
+++ b/src/components/Pages/SetupPage/SetupPage.module.css
@@ -213,7 +213,6 @@
 
   .mobilePreviewContainer :global(.WearablePreview) {
     height: 500px;
-    width: 50%;
     margin: auto;
   }
 
